# Exam

./: CMakeLists.txt
UNIVERSITY/ANNO_I/EX_PROF/EX_1/: function_ex1.c  function_ex1.h  main_ex1.c
UNIVERSITY/ANNO_I/EX_PROF/PAD/: mian_prof.c  pad.c  pad.h
UNIVERSITY/ANNO_II/Array/: Create.c  Create.h  Function.c  Function.h  README.html  main_array.c
UNIVERSITY/ANNO_II/List/: README.html  function_char.c  function_char.h  function_create.c  function_create.h  main.c
UNIVERSITY/ANNO_II/Recursion/: Function_recursive.c  Function_recursive.h  main_recursion.c
UNIVERSITY/PROJECTS/: MakeFile  bmp.c  bmp.h  ip_lib.c  ip_lib.h  main_iplib.c
